--- a/etl.ipynb
+++ b/etl.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipio = pd.read_csv(filepath_or_buffer='./d_municipio.csv')\n",
-    "tempo = pd.read_csv(filepath_or_buffer='./d_tempo.csv')\n",
-    "origem = pd.read_csv(filepath_or_buffer='./origem.csv')"
+    "municipio = pd.read_csv(filepath_or_buffer='./dados/d_municipio.csv')\n",
+    "tempo = pd.read_csv(filepath_or_buffer='./dados/d_tempo.csv')\n",
+    "origem = pd.read_csv(filepath_or_buffer='./dados/origem.csv')"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,28 +737,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Valida se tem alguma data nula"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(dbaMerge[dbaMerge['dataFormatada'].isna()])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Ajusta data para join na d_tempo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +751,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nu_notificacao</th>\n",
+       "      <th>tp_entrada</th>\n",
+       "      <th>tp_pop_liberdade</th>\n",
+       "      <th>tp_pop_rua</th>\n",
+       "      <th>tp_forma</th>\n",
+       "      <th>dt_nascimento</th>\n",
+       "      <th>dt_diagnostico_sintoma</th>\n",
+       "      <th>tp_situacao_encerramento</th>\n",
+       "      <th>co_uf_residencia_atual</th>\n",
+       "      <th>co_municipio_residencia_atual</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dmun_capital_mun</th>\n",
+       "      <th>dmun_regiao</th>\n",
+       "      <th>dmun_regiaox</th>\n",
+       "      <th>dmun_pobreza_mun</th>\n",
+       "      <th>dmun_semiar_mun</th>\n",
+       "      <th>dmun_ride_regiao</th>\n",
+       "      <th>dmun_ride_regiaox</th>\n",
+       "      <th>dmun_pertence_ride</th>\n",
+       "      <th>_merge</th>\n",
+       "      <th>dataFormatada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [nu_notificacao, tp_entrada, tp_pop_liberdade, tp_pop_rua, tp_forma, dt_nascimento, dt_diagnostico_sintoma, tp_situacao_encerramento, co_uf_residencia_atual, co_municipio_residencia_atual, dmun_codibge, dmun_uf_sigla, dmun_uf_nome, dmun_uf_nomex, dmun_municipio, dmun_municipiox, dmun_regiao_saude, dmun_regiao_saudex, dmun_macro_regiao, dmun_macro_regiaox, dmun_divisao_adm, dmun_divisao_admx, dmun_micro_regiao, dmun_micro_regiaox, dmun_regiao_metropolitana, dmun_regiao_metropolitanax, dmun_area_uf, dmun_area_mun, dmun_latitude_mun, dmun_longitude_mun, dmun_altitude_mun, dmun_amazonia_mun, dmun_fronteira_faixa_mun, dmun_fronteira_zona_mun, dmun_capital_mun, dmun_regiao, dmun_regiaox, dmun_pobreza_mun, dmun_semiar_mun, dmun_ride_regiao, dmun_ride_regiaox, dmun_pertence_ride, _merge, dataFormatada]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 44 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(dbaMerge[dbaMerge['dataFormatada'].isna()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,13 +889,13 @@
     "                                         'Mudança de Esquema' if row['tp_situacao_encerramento'] == 8 else 'Não informado'\n",
     "                                         , axis=1)\n",
     "\n",
-    "dbaFull['year4'] = pd.to_datetime(dbaFull['year4']).astype(str).replace('.0', '')\n",
+    "dbaFull['ano'] = pd.to_datetime(dbaFull['dt_diagnostico_sintoma']).dt.strftime('%Y')\n",
     "\n",
     "dbaFull['dtNascimento'] = pd.to_datetime(dbaFull['dt_nascimento']).dt.strftime('%Y-%m-%d')\n",
     "dbaFull['dtDiagnostico'] = pd.to_datetime(dbaFull['dt_diagnostico_sintoma']).dt.strftime('%Y-%m-%d')\n",
     "\n",
     "dbaFull['ref'] = pd.to_datetime(dbaFull['dt_diagnostico_sintoma']).dt.strftime('%Y/%m')\n",
-    "dbaFull['refExt'] = dbaFull.apply(lambda row: str(row['month_name']) + ' de ' + dbaFull['ref'], axis=1)"
+    "dbaFull['refExt'] = dbaFull.apply(lambda row: str(row['month_name']) + ' de ' + dbaFull['ano'], axis=1)"
    ]
   },
   {
