Validação ETL finalizada

--- a/etl/etl.ipynb
+++ b/etl/etl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,6 +1313,8 @@
     "# dbaFull['ref'] = pd.to_datetime(dbaFull['dt_diagnostico_sintoma']).dt.strftime('%Y/%m')\n",
     "# dbaFull['refExt'] = dbaFull.apply(lambda row: str(row['month_name']) + ' de ' + str(row['ano']), axis=1)\n",
     "\n",
+    "dbaFull['month_number'] = dbaFull['month_number'].fillna(0)\n",
+    "\n",
     "dbaFull.rename(columns={'dmun_municipio': 'municipio',\n",
     "                        'dmun_uf_sigla': 'uf', \n",
     "                        'dmun_uf_nome': 'uf_nome',\n",
@@ -1323,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1429,9 +1431,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['nu_notificacao', 'tp_entrada', 'tp_pop_liberdade', 'tp_pop_rua',\n",
+      "       'tp_forma', 'dt_nascimento', 'dt_diagnostico_sintoma',\n",
+      "       'tp_situacao_encerramento', 'co_uf_residencia_atual',\n",
+      "       'co_municipio_residencia_atual', 'dmun_codibge', 'uf', 'uf_nome',\n",
+      "       'dmun_uf_nomex', 'municipio', 'dmun_municipiox', 'dmun_regiao_saude',\n",
+      "       'dmun_regiao_saudex', 'dmun_macro_regiao', 'dmun_macro_regiaox',\n",
+      "       'dmun_divisao_adm', 'dmun_divisao_admx', 'dmun_micro_regiao',\n",
+      "       'dmun_micro_regiaox', 'dmun_regiao_metropolitana',\n",
+      "       'dmun_regiao_metropolitanax', 'dmun_area_uf', 'dmun_area_mun',\n",
+      "       'latitude', 'longitude', 'dmun_altitude_mun', 'dmun_amazonia_mun',\n",
+      "       'dmun_fronteira_faixa_mun', 'dmun_fronteira_zona_mun',\n",
+      "       'dmun_capital_mun', 'dmun_regiao', 'dmun_regiaox', 'dmun_pobreza_mun',\n",
+      "       'dmun_semiar_mun', 'dmun_ride_regiao', 'dmun_ride_regiaox',\n",
+      "       'dmun_pertence_ride', '_merge', 'dataFormatada', 'dte_id',\n",
+      "       'is_last_day_of_month', 'year_semester', 'semester_number',\n",
+      "       'month_name', 'month_abbreviation', 'week_in_month',\n",
+      "       'is_first_day_of_month', 'week_in_year', 'bimonthly_name',\n",
+      "       'date_medium', 'quarter_number', 'is_first_day_in_week', 'day_in_year',\n",
+      "       'month_number', 'bimonthly_number', 'semester_name', 'year_bimonthly',\n",
+      "       'year_quarter', 'is_last_day_in_week', 'day_name', 'date_short',\n",
+      "       'year_month_number', 'quarter_name', 'date_full',\n",
+      "       'year_month_abbreviation', 'day_in_month', 'day_abbreviation', 'year4',\n",
+      "       'date_long', 'year_of_week', 'motivoEntrada', 'popLiber', 'popRua',\n",
+      "       'formaTb', 'situaEnce', 'ano', 'mes', 'dtNascimento', 'dtDiagnostico'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "print(dbaFull.columns)"
    ]
@@ -1445,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -2201,11 +2235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1069"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gbDf = condicional.groupby(['municipio', 'mes', 'ano']).size().reset_index(name='quantidade')"
+    "gbDf = condicional.groupby(['municipio', 'mes', 'ano']).size().reset_index(name='quantidade')\n",
+    "len(gbDf)"
    ]
   },
   {
@@ -2218,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -2360,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -2502,12 +2548,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Aplicando left join para trazer todos os dados montados com os dois dataframes: o df com o condicional do projeto e o outro df com todos os municípios do estado de Goiás. Quem estiver com a quantidade nula, significa que para aquele período, o estado X ão recebeu nenhuma notificação de clientes com TUberculose. Nesse caso, o contador deve ser 0."
+    "##### Aplicando left join para trazer todos os dados montados com os dois dataframes: o df com o condicional do projeto e o outro df com todos os municípios do estado de Goiás. Quem estiver com a quantidade nula, significa que para aquele período, o estado X não recebeu nenhuma notificação de paciente com Tuberculose. Nesse caso, o contador deve ser 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2705,7 +2751,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20        Agosto\n",
+       "66         Março\n",
+       "112     Setembro\n",
+       "158      Janeiro\n",
+       "204         Maio\n",
+       "250        Junho\n",
+       "296    Fevereiro\n",
+       "342      Outubro\n",
+       "388          N/A\n",
+       "434     Novembro\n",
+       "480     Dezembro\n",
+       "526        Julho\n",
+       "572        Abril\n",
+       "Name: mes, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(dfEnd['mes'].drop_duplicates())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -2736,34 +2814,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Trindade</td>\n",
-       "      <td>Agosto de 2024</td>\n",
+       "      <th>44830</th>\n",
+       "      <td>Abadia de Goiás</td>\n",
+       "      <td>Abril de 2022</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Trindade</td>\n",
-       "      <td>Agosto de 2023</td>\n",
+       "      <th>38850</th>\n",
+       "      <td>Abadiânia</td>\n",
+       "      <td>Abril de 2022</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Trindade</td>\n",
-       "      <td>Agosto de 2022</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>Trindade</td>\n",
-       "      <td>Março de 2024</td>\n",
+       "      <th>13136</th>\n",
+       "      <td>Acreúna</td>\n",
+       "      <td>Abril de 2022</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>Trindade</td>\n",
-       "      <td>Março de 2023</td>\n",
-       "      <td>3</td>\n",
+       "      <th>96258</th>\n",
+       "      <td>Adelândia</td>\n",
+       "      <td>Abril de 2022</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76524</th>\n",
+       "      <td>Alexânia</td>\n",
+       "      <td>Abril de 2022</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2772,33 +2850,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147638</th>\n",
-       "      <td>Goiandira</td>\n",
-       "      <td>Julho de 2023</td>\n",
+       "      <th>49746</th>\n",
+       "      <td>Vila Boa</td>\n",
+       "      <td>Setembro de 2024</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147640</th>\n",
-       "      <td>Goiandira</td>\n",
-       "      <td>Julho de 2022</td>\n",
+       "      <th>89812</th>\n",
+       "      <td>Vila Propício</td>\n",
+       "      <td>Setembro de 2024</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147680</th>\n",
-       "      <td>Goiandira</td>\n",
-       "      <td>Abril de 2024</td>\n",
+       "      <th>122702</th>\n",
+       "      <td>Água Fria de Goiás</td>\n",
+       "      <td>Setembro de 2024</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147684</th>\n",
-       "      <td>Goiandira</td>\n",
-       "      <td>Abril de 2023</td>\n",
+       "      <th>141838</th>\n",
+       "      <td>Água Limpa</td>\n",
+       "      <td>Setembro de 2024</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147686</th>\n",
-       "      <td>Goiandira</td>\n",
-       "      <td>Abril de 2022</td>\n",
+       "      <th>9082</th>\n",
+       "      <td>Águas Lindas de Goiás</td>\n",
+       "      <td>Setembro de 2024</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2807,18 +2885,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        municipio         periodo  quantidade\n",
-       "20       Trindade  Agosto de 2024           0\n",
-       "24       Trindade  Agosto de 2023           3\n",
-       "26       Trindade  Agosto de 2022           4\n",
-       "66       Trindade   Março de 2024           1\n",
-       "70       Trindade   Março de 2023           3\n",
-       "...           ...             ...         ...\n",
-       "147638  Goiandira   Julho de 2023           0\n",
-       "147640  Goiandira   Julho de 2022           0\n",
-       "147680  Goiandira   Abril de 2024           0\n",
-       "147684  Goiandira   Abril de 2023           0\n",
-       "147686  Goiandira   Abril de 2022           0\n",
+       "                    municipio           periodo  quantidade\n",
+       "44830         Abadia de Goiás     Abril de 2022           0\n",
+       "38850               Abadiânia     Abril de 2022           3\n",
+       "13136                 Acreúna     Abril de 2022           1\n",
+       "96258               Adelândia     Abril de 2022           0\n",
+       "76524                Alexânia     Abril de 2022           0\n",
+       "...                       ...               ...         ...\n",
+       "49746                Vila Boa  Setembro de 2024           0\n",
+       "89812           Vila Propício  Setembro de 2024           0\n",
+       "122702     Água Fria de Goiás  Setembro de 2024           0\n",
+       "141838             Água Limpa  Setembro de 2024           0\n",
+       "9082    Águas Lindas de Goiás  Setembro de 2024           0\n",
        "\n",
        "[9633 rows x 3 columns]"
       ]
@@ -2828,8 +2906,25 @@
     }
    ],
    "source": [
+    "dfEnd = dfEnd.sort_values(by=['ano', 'mes', 'municipio', 'quantidade'], ascending=True)\n",
     "dfEnd = dfEnd[['municipio', 'periodo', 'quantidade']]\n",
     "display(dfEnd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Eliminando período onde o mes é N/A (Não existe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfEnd = dfEnd[~dfEnd['periodo'].str.contains(\"N/A\")]"
    ]
   },
   {
@@ -2841,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -2881,6 +2976,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(len(dfEnd['periodo'].drop_duplicates()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8892"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8892"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Total de linhas - Distict período X Distinct município\n",
+    "\n",
+    "display(len(dfEnd['municipio'].drop_duplicates()) * len(dfEnd['periodo'].drop_duplicates()))\n",
+    "\n",
+    "# Total de linha do dataframe final\n",
+    "display(len(dfEnd))\n",
+    "\n",
+    "## Se os valores baterem, é possível concluir que existe uma contagem de casos de Tuberculose para todos os municípios em todos os períodos que houve notificação.\n",
+    "## Se não houver nenhum caso para um município específico, ele será demonstrado como 0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2889,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2898,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2914,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -2935,13 +3085,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 5 clientes com o campo tp_entrada não preenchidos. Esse campo é considerado obrigadtório.\n",
-    "Nesse caso, essa quantidade entraria na contagem de desonhcidos ou o correto seria manter apenas os registros com motivoEntrada \"Não Sabe\" como desconhecido?"
+    "- 5 pacientes com o campo tp_entrada não preenchidos. Esse campo é considerado obrigadtório.\n",
+    "Nesse caso, essa quantidade entraria na contagem de desconhecidos ou o correto seria manter apenas os registros com motivoEntrada \"Não Sabe\" como desconhecido?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -2960,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Esses 5 clientes também não possui a tp_forma preenchidos, tornando inviável saber a forma clínica da Tuberculose dos mesmos. Nesse sentido, acredito que o correto seria remover eles da contagem, como o script ja está fazendo. Ate esse momento, a validação das bases está seguindo o fluxo que deveria seguir."
+    "- Esses 5 pacientes também não possui a tp_forma preenchidos, tornando inviável saber a forma clínica da Tuberculose dos mesmos. Nesse sentido, acredito que o correto seria remover eles da contagem, como o script ja está fazendo. Ate esse momento, a validação das bases está seguindo o fluxo que deveria seguir."
    ]
   }
  ],
